--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -4,13 +4,13 @@
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <li><a routerLink="/dns">DNS Lookup</a></li>
-      <li><a routerLink="">MD5 Generator</a></li>
+      <li><a routerLink="/md5">MD5 Generator</a></li>
       <li><a href="">SHA1 Generator</a></li>
       <li><a href="">IP Adress</a></li>
     </ul>
     <ul class="side-nav" id="mobile-demo">
       <li><a routerLink="/dns">DNS Lookup</a></li>
-      <li><a routerLink="">MD5 Generator</a></li>
+      <li><a routerLink="/md5">MD5 Generator</a></li>
       <li><a href="">SHA1 Generator</a></li>
       <li><a href="">IP Adress</a></li>
     </ul>
